Adding tailwind css

--- a/index.html
+++ b/index.html
@@ -3,128 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Linson Alfred - Software Developer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f7f7f7;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1, h2, h3 {
-      color: #333;
-    }
-
-    a {
-      color: #007BFF;
-      text-decoration: none;
-    }
-
-    .section {
-      margin-bottom: 20px;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .experience {
-      margin-bottom: 40px;
-    }
-
-    .timeline {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .timeline-item {
-      display: flex;
-      justify-content: space-between;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .timeline-content {
-      flex-grow: 1;
-      margin-right: 20px;
-    }
-
-    .timeline-year {
-      font-size: 18px;
-      font-weight: bold;
-      color: #007BFF;
-    }
-  </style>
+  <title>Linson Alfred - Full Stack Developer</title>
+  <!-- Include Tailwind CSS (you can link to the CDN or include it locally) -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Linson Alfred</h1>
-    <p>Full Stack Developer</p>
-    <p>Phone: +61 430399637 | Email: jklinson@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/jklinson/">linkedin.com/in/jklinson</a> | GitHub: <a href="https://github.com/jklinson">github.com/jklinson</a></p>
+<body class="bg-gray-100 text-gray-800">
+
+  <header class="bg-gray-800 text-white text-center py-4">
+    <h1 class="text-3xl font-semibold">Linson Alfred</h1>
+    <p class="text-lg">Experienced Full-Stack Developer | AWS Enthusiast | Scrum Master</p>
   </header>
 
-  <div class="timeline">
-    <div class="timeline-item">
-      <div class="timeline-content">
-        <h2>Full Stack Developer (Associate Manager) at Pomelo Fashion Co Ltd, Thailand</h2>
-        <p>Mar 2021 - Oct 2023</p>
-        <p>Played a pivotal role in transitioning the system to an event-driven architecture, enhancing scalability and performance...</p>
-      </div>
-      <div class="timeline-year">2021 - 2023</div>
-    </div>
+  <div class="container mx-auto mt-8">
 
-    <div class="timeline-item">
-      <div class="timeline-content">
-        <h2>Full Stack Developer at TMB Thanachart Bank, Thailand</h2>
-        <p>Oct 2018 - Feb 2022</p>
-        <p>Developed and maintained Ionic applications, delivering web, Android, and iOS solutions for a retail mobile banking application...</p>
-      </div>
-      <div class="timeline-year">2018 - 2022</div>
-    </div>
+    <section class="bg-white rounded shadow-md p-8 mb-8">
+      <h2 class="text-2xl font-semibold mb-4">🚀 Quick Highlights</h2>
+      <ul class="list-disc ml-6">
+        <li class="mb-2">🔧 Strong proficiency in JavaScript, TypeScript, and Node.js for backend development.</li>
+        <li class="mb-2">☁️ Extensive experience with AWS services like Lambda, DynamoDB, API Gateway, SQS, and more.</li>
+        <li class="mb-2">🛠️ Skilled in frontend technologies such as React, Angular, HTML5, and CSS.</li>
+        <li class="mb-2">📱 Hands-on experience in mobile app development using Ionic, Cordova, Android (Java), and iOS (Objective-C).</li>
+        <li class="mb-2">🌐 Well-versed in deploying applications with Nginx, Apache, Docker, and utilizing Terraform for infrastructure.</li>
+        <li class="mb-2">🔄 DevOps enthusiast with expertise in GitHub Actions and CI/CD pipelines.</li>
+      </ul>
+    </section>
 
-    <div class="timeline-item">
-      <div class="timeline-content">
-        <h2>Engineering Lead at Mobme Wireless Solution Pvt Ltd, India</h2>
-        <p>Feb 2016 - Sep 2018</p>
-        <p>Led mobile banking application development, integrating it with IBM Worklight, and utilizing technologies such as Sencha Touch, Backbone, React.js, Node.js, MongoDB, and Docker...</p>
-      </div>
-      <div class="timeline-year">2016 - 2018</div>
-    </div>
+    <section class="bg-white rounded shadow-md p-8 mb-8">
+      <h2 class="text-2xl font-semibold mb-4">🏆 Key Achievements</h2>
+      <ul class="list-disc ml-6">
+        <li class="mb-2">🚀 Led teams in transforming legacy applications into robust event-driven systems, significantly improving scalability.</li>
+        <li class="mb-2">🌐 Spearheaded multiple complex migration initiatives of systems to AWS serverless architecture.</li>
+        <li class="mb-2">🏅 Recognized for technical problem-solving skills and conflict resolution abilities.</li>
+        <li class="mb-2">⏰ Multi-year track record of delivering large-scale digital transformation initiatives on-time.</li>
+      </ul>
+    </section>
 
-    <div class="timeline-item">
-      <div class="timeline-content">
-        <h2>Senior Mobile Developer at Cognizant, India</h2>
-        <p>Jan 2015 - Jan 2016</p>
-        <p>Led efforts to enhance a critical insurance application tailored for sales agents at a major insurance company...</p>
-      </div>
-      <div class="timeline-year">2015 - 2016</div>
-    </div>
+    <!-- Add more sections as needed -->
 
-    <div class="timeline-item">
-      <div class="timeline-content">
-        <h2>Software Engineer at Cabot Solutions Pvt Ltd, India</h2>
-        <p>Sep 2012 - Jan 2015</p>
-        <p>Proficiently worked with a range of technologies, including Native Android, Native iOS, Cordova, Sencha Touch, Angular, and Ionic...</p>
+    <section class="bg-white rounded shadow-md p-8 mb-8">
+      <h2 class="text-2xl font-semibold mb-4">👨‍💻 Experience</h2>
+
+      <!-- Timeline item -->
+      <div class="flex justify-between mb-6">
+        <div class="flex-grow">
+          <h3 class="text-xl font-semibold mb-2">Full Stack Developer (Associate Manager) at Pomelo Fashion Co Ltd, Thailand</h3>
+          <p class="text-gray-600">Mar 2021 - Oct 2023</p>
+          <p>Transformed systems to event-driven architecture, enhancing scalability. Led integrations with third-party systems like Shopify, Contentful, Braze, Marketplacer.</p>
+          <p class="text-blue-500"><a href="#">Read more...</a></p>
+        </div>
+        <div class="text-gray-700 text-lg">2021 - 2023</div>
       </div>
-      <div class="timeline-year">2012 - 2015</div>
-    </div>
+      <!-- Add more timeline items as needed -->
+
+    </section>
+
+    <section class="bg-white rounded shadow-md p-8 mb-8">
+      <h2 class="text-2xl font-semibold mb-4">📚 Education</h2>
+      <p class="mb-4">Bachelor’s in Computer Science (2007 - 2011) - 61% - Cochin University.</p>
+    </section>
+
+    <section class="bg-white rounded shadow-md p-8">
+      <h2 class="text-2xl font-semibold mb-4">📫 Connect with Me</h2>
+      <p class="mb-2">LinkedIn: <a href="https://www.linkedin.com/in/jklinson/" class="text-blue-500">linkedin.com/in/jklinson</a></p>
+      <p>GitHub: <a href="https://github.com/jklinson" class="text-blue-500">github.com/jklinson</a></p>
+    </section>
+
   </div>
-
-  <section class="section">
-    <h2>Education</h2>
-    <p>Bachelor’s in Computer Science (2007 - 2011) - 61% - Cochin University.</p>
-  </section>
 
 </body>
 </html>
