Added timeline items

--- a/index.html
+++ b/index.html
@@ -49,11 +49,46 @@
           <h3 class="text-xl font-semibold mb-2">Full Stack Developer (Associate Manager) at Pomelo Fashion Co Ltd, Thailand</h3>
           <p class="text-gray-600">Mar 2021 - Oct 2023</p>
           <p>Transformed systems to event-driven architecture, enhancing scalability. Led integrations with third-party systems like Shopify, Contentful, Braze, Marketplacer.</p>
-          <p class="text-blue-500"><a href="#">Read more...</a></p>
         </div>
         <div class="text-gray-700 text-lg">2021 - 2023</div>
       </div>
-      <!-- Add more timeline items as needed -->
+
+      <div class="flex justify-between mb-6">
+        <div class="flex-grow">
+          <h3 class="text-xl font-semibold mb-2">Full Stack Developer (Associate Manager) at Pomelo Fashion Co Ltd, Thailand</h3>
+          <p class="text-gray-600">Oct 2018 - Feb 2022</p>
+          <p>Developed and maintained Ionic applications, delivering web, Android, and iOS solutions for a retail mobile banking application.</p>
+        </div>
+        <div class="text-gray-700 text-lg">2018 - 2022</div>
+      </div>
+
+      <div class="flex justify-between mb-6">
+        <div class="flex-grow">
+          <h3 class="text-xl font-semibold mb-2">Engineering Lead at Mobme Wireless Solution Pvt Ltd, India</h3>
+          <p class="text-gray-600">Feb 2016 - Sep 2018</p>
+          <p>Led mobile banking application development, integrating it with IBM Worklight, and utilizing technologies such as Sencha Touch, Backbone, React.js, Node.js, MongoDB, and Docker.</p>
+        </div>
+        <div class="text-gray-700 text-lg">2018 - 2022</div>
+      </div>
+
+      <div class="flex justify-between mb-6">
+        <div class="flex-grow">
+          <h3 class="text-xl font-semibold mb-2">Senior Mobile Developer at Cognizant, India</h3>
+          <p class="text-gray-600">Jan 2015 - Jan 2016</p>
+          <p>Led efforts to enhance a critical insurance application tailored for sales agents at a major insurance company.</p>
+        </div>
+        <div class="text-gray-700 text-lg">2015 - 2016</div>
+      </div>
+
+      <div class="flex justify-between mb-6">
+        <div class="flex-grow">
+          <h3 class="text-xl font-semibold mb-2">Software Engineer at Cabot Solutions Pvt Ltd, India</h3>
+          <p class="text-gray-600">Sep 2012 - Jan 2015</p>
+          <p>Proficiently worked with a range of technologies, including Native Android, Native iOS, Cordova, Sencha Touch, Angular, and Ionic.</p>
+        </div>
+        <div class="text-gray-700 text-lg">2012 - 2015</div>
+      </div>
+     
 
     </section>
 
